# EBAC_Fullstack_Python

./: .gitignore  README.md  changelog.md
AJAX/: index.html  main.js
BEM/: package-lock.json  package.json
BOAS PRATICAS CSS/: Gruntfile.js  package-lock.json  package.json
BookStore/: Dockerfile  README.md  docker-compose.yml  env.dev  pyproject.toml  pytest.ini  setup.cfg
BookStore/.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
BookStore/bookstore/: settings.py  urls.py
BookStore/order/: factories.py  urls.py
BookStore/order/migrations/: 0001_initial.py
BookStore/order/serializers/: order_serializer.py
BookStore/order/tests/test_serializer/: test_order_serializer.py
BookStore/order/tests/test_viewsets/: test_order_viewset.py
BookStore/order/viewsets/: order_viewset.py
BookStore/product/: factories.py  urls.py
BookStore/product/migrations/: 0001_initial.py
BookStore/product/models/: __init__.py  product.py
BookStore/product/serializers/: category_serializer.py  product_serializer.py
BookStore/product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
BookStore/product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
BookStore/product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
Bootstrap/: index.html
Bootstrap-Avançado-Exercicio/: index.html
CSS/: index.html  main.css
CSS-Responsivo/: index.html
CSS-Responsivo-Exercicio/: index.html
Create-React-App/: eslint.config.mjs  package-lock.json  package.json
Cypress/: cypress.config.js  (+2 more)
(+315 files in other folders)
