[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "BookStore API"
authors = ["Felipe Cerqueira <felipecer06@gmail.com>"]
readme = "readme.md"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
pytest-django = "^4.9.0"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
psycopg2 = "^2.9.10"
gitpython = "^3.1.43"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
